[package]
name = "my-website-api"
version = "0.1.0"
edition = "2021"
authors = ["Josh Arnow"]

# NOTE - https://doc.rust-lang.org/cargo/reference/manifest.html
# NOTE - https://www.reddit.com/r/rust/comments/a8kzo6/psa_writing_for_crates_in_cargotoml_wont_always/


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
hyper = { version = "1.3.1", features = ["full"] }
# sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "offline"] }
sqlx = { version = "0.7.4" }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
cargo-watch = "8.5.2"
# tower-http = "0.5.2"
# rt-multi-thread = "0.1.0"
